<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background"
    tools:context=".NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/play"
                style="@style/NowplayingStyle"
                tools:text="song title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/play1"
                style="@style/NowplayingStyle"
                tools:text="song title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/play2"
                style="@style/NowplayingStyle"
                tools:text="song title"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/play3"
                style="@style/NowplayingStyle"
                android:textColor="@android:color/white"
                tools:text="song title" />

            <ImageView
                android:id="@id/image"
                android:layout_width="match_parent"
                android:layout_height="287dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="113dp"
                android:contentDescription="@string/now_playing"
                android:src="@drawable/play_image1" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pause"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="51dp"
                android:layout_marginLeft="71dp"
                android:layout_marginStart="71dp"
                android:contentDescription="@string/pause_button"
                android:src="@drawable/ic_pause" />

            <ImageView
                android:id="@+id/np1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/play"
                android:src="@drawable/ic_play_arrow" />

            <ImageView
                android:id="@+id/stop"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="71dp"
                android:layout_marginRight="71dp"
                android:contentDescription="@string/stop_button"
                android:src="@drawable/ic_stop" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>